--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
   <div id="contact" class="footer">
     <div class="container">
       <p class="text-center light-white-font">
-        <a class="orange-font" href="mailto:email@alisinanozturk.com" title="E-mail" target="email">email@alisinanozturk.com</a> </p>
+        <a class="orange-font" href="mailto:alisinan@live.com" title="E-mail" target="email">alisinan@live.com</a> </p>
       <p class="text-center light-white-font"><a class="orange-font" href="http://www.coroflot.com/alisinan/" title="Coroflot" target="coroflot">coroflot</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
         <a class="orange-font" href="https://www.linkedin.com/in/alisinan" title="Linkedin" target="linkedin">linkedin</a>   
       </p>
