--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="menu-button">
       <i class="fa fa-bars fa-3x orange-font"></i>
     </div>
-    <nav id="sidebar" class="hidden">
+    <!--<nav id="sidebar" class="hidden">
       <ul class="nav nav-pills nav-stacked list-group">
         <li class="text-uppercase"><a href="#home">Home</a></li>
         <li class="text-uppercase"><a href="#projects">Projects</a></li>
@@ -31,7 +31,7 @@
         <li class="text-uppercase"><a href="#about">About</a></li>
         <li class="text-uppercase"><a href="#contact">Contact</a></li>
       </ul>
-    </nav>
+    </nav> -->
     <div id="home" class="container-fluid fill dark-gray-background">
       <h1 class="center text-center">
             <p>Hi, my name is</p> <p><strong class="orange-font">Ali Sinan Ozturk</strong></p>
