--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 </head>
 <body>
   <div class="container-fluid fill light-white-font">
-    <div id="menu-button">
+    <!--<div id="menu-button">
       <i class="fa fa-bars fa-3x orange-font"></i>
     </div>
-    <!--<nav id="sidebar" class="hidden">
+    <nav id="sidebar" class="hidden">
       <ul class="nav nav-pills nav-stacked list-group">
         <li class="text-uppercase"><a href="#home">Home</a></li>
         <li class="text-uppercase"><a href="#projects">Projects</a></li>
