--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Prism - Bootstrap 4 Open Source Landing Page Template</title>
+    <title>Ali Sinan Ozturk - Test Area</title>
     <meta name="description" content="Prism is a beautiful Bootstrap 4 template for open-source landing pages."/>
 
     <!--Google font-->
@@ -20,53 +20,19 @@
     <div class="container">
         <div class="row">
             <div class="col-12 d-flex flex-row align-items-center justify-content-between">
-                <div class="heading-brand">Prism.js</div>
-                <a href="https://prismjs.com/download.html" class="btn btn-dark" target="_blank">Download</a>
+                <div class="heading-brand">Ali Sinan Ozturk</div>
+                <a href="https://www.linkedin.com/in/alisinan/" class="btn btn-dark" target="_blank">Contact</a>
             </div>
         </div>
         <div class="row mt-6">
             <div class="col-md-8 mx-auto text-center">
-                <h1>Syntax Highlighter for Every Language</h1>
-                <p class="lead mb-5">Prism is a lightweight, extensible syntax highlighter, built with modern web
-                    standards in mind. It’s used in thousands of websites, including some of those you visit daily.</p>
-                <a href="https://github.com/LeaVerou/prism/" class="btn btn-success svg-icon">
-                    <em class="mr-2" data-feather="github"></em>
-                    Contribute
-                </a>
-            </div>
-        </div>
-        <div class="row mt-5">
-            <div class="col-md-9 mx-auto">
-                <div class="code-window">
-                    <div class="dots">
-                        <div class="red"></div>
-                        <div class="orange"></div>
-                        <div class="green"></div>
-                    </div>
-                    <pre class="language-javascript line-numbers"><code class="language-javascript">import {DomSanitizer} from '@angular/platform-browser';
-import {Pipe, PipeTransform} from '@angular/core';
-
-import { icons } from 'feather-icons'; // v4+
-
-@Pipe({ name: 'feather' })
-export class FeatherIconsPipe implements PipeTransform {
-
-  constructor(private sanitizer: DomSanitizer) {}
-
-  transform(icon: string, size: number = 24, color: string = 'inherit') {
-    return this.sanitizer.bypassSecurityTrustHtml(icons[icon].toSvg({
-      width: size,
-      height: size,
-      color: color
-    }));
-  }
-}</code></pre>
-                </div>
+                <h1>Test Area for Visualization Projects</h1>
+                <p class="lead mb-5">This website is dedicated for personal projects. Everyday I'm trying new 3D visualization technics.</p>
             </div>
         </div>
     </div>
 </section>
-
+<!--
 <!--Features Section-->
 <section class="py-6">
     <div class="container">
@@ -168,7 +134,7 @@ export class FeatherIconsPipe implements PipeTransform {
         </div>
     </div>
 </section>
-
+-->
 <!--footer-->
 <footer class="py-5 bg-light">
     <div class="container">
