--- a/AR/davinci/index.html
+++ b/AR/davinci/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Arttırılmış Gerçeklik ile Tanıtım</title>
+    <title>Ali Sinan Ozturk</title>
     <meta charset="utf-8">
     <meta name="description" content="Da Vinci'nin bu tablosu gibi siz de tablolarınızı arttırılmış gerçeklikle tanıtmak ister misiniz?">
     <meta name="viewport" content="width=device-width, initial-scale=1">
