--- a/AR/omax/index.html
+++ b/AR/omax/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Arttırılmış Gerçeklik ile Makina Deneyimi</title>
+    <title>Ali Sinan Ozturk</title>
     <meta charset="utf-8">
-    <meta name="description" content="Makinalarınızı arttırılmış gerçeklikle beraber tanıtmak ister misiniz?">
+    <meta name="description" content="Arttırılmış Gerçeklik ile Makina Deneyimi">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="text/css" href="./styles.css" rel="stylesheet"/>
     <!-- OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
