--- a/AR/alfemo/1/index.html
+++ b/AR/alfemo/1/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <!-- <model-viewer> HTML element -->
-    <model-viewer src="Alfemo-Butun.draco.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls environment-image="neutral" poster="poster.webp" shadow-intensity="1">
+    <model-viewer src="Alfemo-Butun.draco.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls environment-image="photo_studio_loft_hall_1k.hdr" poster="poster.webp" shadow-intensity="4.6" shadow-softness="0.69" exposure="1.55" camera-orbit="2.763deg 87.63deg auto">
       <div class="progress-bar hide" slot="progress-bar">
           <div class="update-bar"></div>
       </div>
