--- a/AR/alfemo/1/index.html
+++ b/AR/alfemo/1/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Arttırılmış Gerçeklik Uygulaması</title>
+    <title>&lt;model-viewer&gt; template</title>
     <meta charset="utf-8">
-    <meta name="description" content="Satın almadan, mobilyanızı bire bir gerçek ölçüleri ile görmek ister misiniz?">
+    <meta name="description" content="&lt;model-viewer&gt; template">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="text/css" href="./styles.css" rel="stylesheet"/>
     <!-- OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
@@ -11,7 +11,7 @@
   </head>
   <body>
     <!-- <model-viewer> HTML element -->
-    <model-viewer src="Alfemo-Butun.draco.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls environment-image="photo_studio_loft_hall_1k.hdr" poster="poster.webp" shadow-intensity="4.6" shadow-softness="0.69" exposure="1.55" camera-orbit="2.763deg 87.63deg auto">
+    <model-viewer src="alfemo-montaj.draco.glb" ar ar-modes="scene-viewer webxr quick-look" camera-controls environment-image="photo_studio_loft_hall_1k.hdr" poster="poster.webp" shadow-intensity="1">
       <div class="progress-bar hide" slot="progress-bar">
           <div class="update-bar"></div>
       </div>
