--- a/AR/planor/index.html
+++ b/AR/planor/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>&lt;model-viewer&gt; template</title>
+    <title>TEKYAZ Tasarım Zirvesi 2021</title>
     <meta charset="utf-8">
-    <meta name="description" content="&lt;model-viewer&gt; template">
+    <meta name="description" content="SOLIDWORKS Visualize - Arttırılmış Gerçeklik">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="text/css" href="./styles.css" rel="stylesheet"/>
     <!-- OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
@@ -16,7 +16,7 @@
           <div class="update-bar"></div>
       </div>
       <button slot="ar-button" id="ar-button">
-          View in your space
+          Odanızda görüntüleyin
       </button>
       <div id="ar-prompt">
           <img src="ar_hand_prompt.png">
