--- a/AR/studio/index.html
+++ b/AR/studio/index.html
@@ -15,7 +15,7 @@
         }
 
         #header {
-            font-size: 6em;
+            font-size: 4em;
             padding: 5px;
         }
 
@@ -51,25 +51,25 @@
 </head>
 <body>
     <div id = "header">
-        Examples
+        AR Studio Showroom
     </div>
     <div class= "cell babylon">
-        <babylon model="https://alisinan.github.io/AR/portmanto/Portmanto.glb"></babylon>
+    <babylon model="https://alisinan.github.io/AR/portmanto/Portmanto.glb"></babylon>
     </div>
-    <div class = "cell">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    <div class= "cell babylon">
+        <babylon model="https://alisinan.github.io/AR/omax/micromax-simplified-r1.draco.glb"></babylon>
     </div>
-    <div class= "cell">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    <div class= "cell babylon">
+        <babylon model="https://alisinan.github.io/AR/planor/planor.draco.glb"></babylon>
     </div>
-    <div class= "cell">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    <div class= "cell babylon">
+        <babylon model="https://alisinan.github.io/AR/davinci/davinci-r2.draco.glb"></babylon>
     </div>
-    <div class= "cell">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    <div class= "cell babylon">
+        <babylon model="https://alisinan.github.io/AR/alfemo/komodin/AlfemoKomodin.draco.glb"></babylon>
     </div>
-    <div class= "cell">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    <div class= "cell babylon">
+        <babylon model="https://alisinan.github.io/AR/alfemo/1/alfemo-montaj.draco.glb"></babylon>
     </div>
 
 </body>
