--- a/AR/studio/index.html
+++ b/AR/studio/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <title>AR Examples</title>
+    <title>AR Examples - Ali Sinan Ozturk</title>
 
     <script src="https://cdn.babylonjs.com/viewer/babylon.viewer.js"></script>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" />
