--- a/AR/sergi/thewaterlilypond/index.html
+++ b/AR/sergi/thewaterlilypond/index.html
@@ -10,20 +10,44 @@
     <script src="https://unpkg.com/focus-visible@5.0.2/dist/focus-visible.js" defer></script>
   </head>
   <body>
+    <div id="card">
     <!-- <model-viewer> HTML element -->
-    <model-viewer bounds="tight" src="thewaterlilypond.draco.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1" environment-image="aircraft_workshop_01_1k.hdr" ar-placement="wall">
-      <div class="progress-bar hide" slot="progress-bar">
-          <div class="update-bar"></div>
-      </div>
-      <button slot="ar-button" id="ar-button">
-          View on your wall
-      </button>
-      <div id="ar-prompt">
-          <img src="ar_hand_prompt.png">
-      </div>
-    </model-viewer>  
+      <model-viewer bounds="tight" src="thewaterlilypond.draco.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1" environment-image="aircraft_workshop_01_1k.hdr" ar-placement="wall">
+        <div class="progress-bar hide" slot="progress-bar">
+            <div class="update-bar"></div>
+        </div>
+        <button slot="ar-button" id="ar-button">
+            View on your wall
+        </button>
+        <div id="ar-prompt">
+            <img src="ar_hand_prompt.png">
+        </div>
+      </model-viewer>  
+
+      <section class="attribution"> 
+        <span>
+          <h1>The Water Lily Pond, 1899</h1>
+          <span>By <a href="https://www.claude-monet.com/the-water-lily-pond.jsp" target="_blank">Claude Monet</a></span>
+        </span>
+        <a class="cc" href="https://creativecommons.org/licenses/by/2.0/" target="_blank">
+          <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg">
+          <img src="https://mirrors.creativecommons.org/presskit/icons/by.svg">
+        </a>
+      </section>
+
+    </div>
+
+    <footer>
+      <span>This page is a basic demo page of Augmented Reality for Galleries.</span>
+    </footer>
+
     <script src="script.js"></script>
     <!-- Loads <model-viewer> for browsers: -->
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+
+    <script nomodule
+    src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js">
+    </script>
+
   </body>
 </html>
