--- a/AR/pelin/01/index.html
+++ b/AR/pelin/01/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <!-- <model-viewer> HTML element -->
-    <model-viewer bounds="tight" src="pelin-01.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls environment-image="neutral" poster="poster.png" shadow-intensity="1">
+    <model-viewer bounds="tight" src="pelin-01.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls environment-image="neutral" poster="poster.png" shadow-intensity="1" ar-placement="wall">
       <div class="progress-bar hide" slot="progress-bar">
           <div class="update-bar"></div>
       </div>
