--- a/AR/lptsens/index.html
+++ b/AR/lptsens/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>&lt;model-viewer&gt; template</title>
+    <title>LPTSENS Yük Hücreleri</title>
     <meta charset="utf-8">
     <meta name="description" content="LPTSENS Yük Hücreleri">
     <meta name="viewport" content="width=device-width, initial-scale=1">
