--- a/interactive/AR/portmanto/index.html
+++ b/interactive/AR/portmanto/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Ali Sinan Ozturk</title>
+    <title>Furniture Marketing Experience</title>
     <meta charset="utf-8">
-    <meta name="description" content="Arttırılmış Gerçeklik ile Mobilya Tanıtımı">
+    <meta name="description" content="Augmented Reality by Ali Sinan Ozturk">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="text/css" href="./styles.css" rel="stylesheet"/>
     <!-- OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
