--- a/interactive/AR/slvedu/index.html
+++ b/interactive/AR/slvedu/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>TEKYAZ - SolidVision SLVEDU</title>
+    <title>SolidVision SLVEDU</title>
     <meta charset="utf-8">
-    <meta name="description" content="Augmented Reality by TEKYAZ Studio">
+    <meta name="description" content="Augmented Reality by Ali Sinan Ozturk">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="text/css" href="./styles.css" rel="stylesheet"/>
     <!-- OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
@@ -16,7 +16,7 @@
           <div class="update-bar"></div>
       </div>
       <button slot="ar-button" id="ar-button">
-          Odanızda görün
+          View in your space
       </button>
       <div id="ar-prompt">
           <img src="ar_hand_prompt.png">
