--- a/interactive/tekyaz/index.html
+++ b/interactive/tekyaz/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/dist/mindar-image-aframe.prod.js"></script>
   </head>
   <body>
-    <a-scene mindar-image="imageTargetSrc: ./tekyaz.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+    <a-scene mindar-image="imageTargetSrc: ./tekyaz.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false" gltf-model="dracoDecoderPath: ./a1.js;">
       <a-assets>
         <img id="card" src="./resources/ref.jpg"/>
         <a-asset-item id="3D" src="https://www.alisinanozturk.com/interactive/AR/slvedu/SLVEDU.02.glb"></a-asset-item>
@@ -15,7 +15,7 @@
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0">
         <a-plane src="#card" position="0 0 0" height="0.667" width="1" rotation="0 0 0"></a-plane>
-        <a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="0.005 0.005 0.005" src="#avatarModel" animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
+        <a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="0.005 0.005 0.005" src="#3D" animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
       </a-entity>
     </a-scene>
   </body>
