--- a/interactive/tekyaz/index.html
+++ b/interactive/tekyaz/index.html
@@ -7,10 +7,10 @@
     <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/dist/mindar-image-aframe.prod.js"></script>
   </head>
   <body>
-    <a-scene mindar-image="imageTargetSrc: ./tekyaz.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false" gltf-model="dracoDecoderPath: a1.js;">
+    <a-scene mindar-image="imageTargetSrc: ./tekyaz.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false" gltf-model="dracoDecoderPath: ./a1.js;">
       <a-assets>
         <img id="card" src="./resources/ref.jpg"/>
-        <a-asset-item id="3D" src="SLVEDU.glb"></a-asset-item>
+        <a-asset-item id="3D" src="./SLVEDU.glb"></a-asset-item>
       </a-assets>
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0">
