--- a/interactive/tekyaz/index.html
+++ b/interactive/tekyaz/index.html
@@ -10,7 +10,7 @@
     <a-scene mindar-image="imageTargetSrc: ./tekyaz.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
         <img id="card" src="./resources/ref.jpg"/>
-        <a-asset-item id="3D" src="./SLVEDU.glb"></a-asset-item>
+        <a-asset-item id="3D" src="./SLVEDU.gltf"></a-asset-item>
       </a-assets>
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0">
