--- a/interactive/AR/webxrdemo/index.html
+++ b/interactive/AR/webxrdemo/index.html
@@ -18,7 +18,7 @@
         </button>
       
         <div id="ar-prompt">
-          <img src="../../assets/hand.png">
+          <img src="../../interactive/AR/webxrdemo/hand.png">
         </div>
       
         <button id="ar-failure">
