--- a/interactive/AR/webxrdemo/index.html
+++ b/interactive/AR/webxrdemo/index.html
@@ -39,7 +39,7 @@
           </button></div>
         </div>
       </model-viewer>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
     <!-- Loads <model-viewer> for browsers: -->
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   </body>
