--- a/Interactive/denge/31002v2/index.html
+++ b/Interactive/denge/31002v2/index.html
@@ -1,15 +1,10 @@
-<!--
-  KeyShotXR
-  (c) Copyright 2012-2017 Luxion ApS - All Rights Reserved.
--->
-
 <!DOCTYPE html>
 <html xmlns='http://www.w3.org/1999/xhtml'>
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>KeyShotXR</title>
+    <title>Denge Automotive</title>
     <style type="text/css">
       body { -ms-touch-action: none; }
     </style>
@@ -28,9 +23,9 @@
         var uWrap = true;
         var vWrap = false;
         var uMouseSensitivity = -0.0444444;
-        var vMouseSensitivity = 1;
+        var vMouseSensitivity = 0.0416667;
         var uStartIndex = 8;
-        var vStartIndex = 2147483648;
+        var vStartIndex = 3;
         var minZoom = 1;
         var maxZoom = 1;
         var rotationDamping = 0.96;
